<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">easy-slim-beta</string>
    <string name="action_settings">Settings</string>
    <string name="recommendation">Recomendación</string>
    <string name="Calorias">Consultar Calorias</string>
    <string name="Menu">Menu</string>
    <string name="askName">Escribe tu nombre</string>
    <string name="askBirthDay">¿Cuándo naciste?</string>
    <string name="askHeight">¿Cuanto mides (en cm)?</string>
    <string name="askWeight">¿Cuanto pesas (en kg)?</string>
    <string name="accept">Aceptar</string>
    <string name="profile_file">profile_shared</string>
    <string name="calorias">calorias</string>
    <string name="none" />
    <string name="welcome">Hola </string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="dietsB">Dietas</string>
    <string name="foodB">Consultar alimentos</string>
    <string name="weightB">peso</string>
    <string name="info_title">Informacion general</string>
    <string name="info_condition">test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 test1 </string>
    <string name="info_thin">Tu indice de masa corporal (IMC) indica que estas por debajo del peso promedio para tu estatura.</string>
    <string name="info_normal">Tu indice de masa corporal (IMC) indica que posees un peso adecuado para tu estatura.</string>
    <string name="info_fat">Tu indice de masa corporal (IMC) indica que estas por encima del peso promedio para tu estatura.</string>
    <string name="pickDate">Ingresar Fecha</string>
    <string name="user_profile">UserProfile</string>
    <string name="name">name</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="title_activity_advice">Recomendaciones</string>
    <string name="hello_world">Hello world!</string>
    <string name="Next">Siguiente</string>
    <string name="Previous">Anterior</string>
    <string name="dialogMessage">Por favor, inserta valores correctos</string>
    <string name="heightTitleInfo">Estatura</string>
    <string name="weightTitleInfo">Peso</string>
    <string name="imcTitleInfo">IMC</string>
    <string name="RecomendationText">Recomendación 0 de 0</string>
    <string name="portions">Porciones</string>
    <string name="Fruits">Mango, durazno, fresa, banano, uva, manzana, papaya, lulo, maracuyá, ciruelas.</string>
	<string name ="Roots">Yuca, papa, arracacha, plátano, ñame.</string>
	<string name = "Vegetables">Zanahoria, tomate, lechuga, pimentón, arveja verde, habichuelas, auyama, brócoli, espinacas, acelga, remolacha, repollo.</string>
	<string name = "Fat">Aceite, mantequilla, margarina, manteca.</string>
	<string name = "Sugar">Azúcar, arequipe, bocadillo.</string>
	<string name = "Meat">Carne de res, carne de cerdo pollo, pescado, vísceras, huevo, lenteja, garbanzo, fríjol, arveja seca.</string>
	<string name = "Dairy">Leche, yogurt, kumis, queso, cuajada.</string>
	<string name = "Cereals">Arroz, pasta, pan, arepa, maíz, cebada, avena.</string>
	<string name="vitamins">Vitaminas</string>
	<string name="minerals">Minerales</string>
	<string name="whereto">Lo puedes encontrar en:</string>
	<string name="menunutrients">Consultar nutrientes</string>
	<string name="menuinfo">Información general</string>
	<string name="navigate">Deslice hacia los lados o use los botones para ver más recomendaciones.</string>
	<string name="recommendationImage">Imagen de la recomendación</string>
	<string name="recommendationsNotFound">No se encontraron Recomendaciones.</string>
</resources>