<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/lib/com.google.ads">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="140dp"
        android:layout_height="132dp"
        android:contentDescription="@string/none"
        android:gravity="center"
        android:src="@drawable/logo2" />

    <Button
        android:id="@+id/vitaminsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@anim/custombutton"
        android:gravity="center"
        android:onClick="vitaminsClick"
        android:text="@string/vitamins" />

    <Button
        android:id="@+id/mineralsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@anim/custombutton"
        android:gravity="center"
        android:onClick="mineralsClick"
        android:text="@string/minerals" />

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        app:adSize="SMART_BANNER"
        app:adUnitId="e9fbd061f5ad4ff7" >
    </com.google.ads.AdView>

</LinearLayout>