<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdviceActivity" >

    <TextView
        android:id="@+id/numberRecomendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/RecomendationText"
        android:textAlignment="gravity"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <ImageView
        android:id="@+id/portionImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/numberRecomendation" />

    <TextView
        android:id="@+id/recomendationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/prevButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/recomendationImage"
        android:textAlignment="gravity"
        android:textSize="19sp" />

    <Button
        android:id="@+id/nextButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="39dp"
        android:layout_toRightOf="@+id/prevButton"
        android:background="@anim/custombutton1"
        android:onClick="nextRecomendation"
        android:text="@string/Next" />

    <Button
        android:id="@+id/prevButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nextButton"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_alignLeft="@+id/recomendationText"
        android:layout_marginLeft="56dp"
        android:background="@anim/custombutton1"
        android:onClick="prevRecomendation"
        android:text="@string/Previous" />

</RelativeLayout>